qol: using CC to translate color materials